Fixed an issue with the image being too big with lower resolutions

--- a/styles/veetintyyli.css
+++ b/styles/veetintyyli.css
@@ -113,7 +113,7 @@ button {
     img {
         position: relative;
         display: block;
-        max-width: 50%;
+        max-width: 40%;
     }
 }
 
@@ -121,7 +121,7 @@ button {
     img {
         position: relative;
         display: block;
-        max-width: 50%;
+        max-width: 40%;
     }
 
     #navbar a {
